Implement category filtering using ProductSearchEngine (#90)
- Updated `CategoryAdminController` to accept a query parameter and delegate to `CategoryAdminService`.
- Updated `CategoryAdminServiceImpl` to use `ProductSearchEngine` for searching categories and synchronize cache on CRUD operations.
- Updated `ProductSearchEngine` to include `cachedCategories` and `cachedCategoryChildren` management and implemented `searchCategories` using fuzzy search.
- Updated `ProductSearchEngineTest` to include tests for category filtering.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>